--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,9 @@
         "league/oauth2-client": "^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0",
         "mockery/mockery": "~0.9",
+        "phpunit/phpunit": "~4.0",
+        "roave/security-advisories": "dev-master",
         "squizlabs/php_codesniffer": "~2.0"
     },
     "autoload": {
